# id-ocr

./: .gitignore  Makefile  README.md  example_1.py  hsv_color.py  ocr.ipynb  ocr.py  pyproject.toml  requirements.txt
src/: constants.py  match.py  rois.py  show.py  types.py  utils.py
