[tool.poetry]
name = "id-ocr"
version = "0.1.0"
description = ""
authors = ["Dan Percic <danpercic86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pytesseract = "^0.3.9"
opencv-contrib-python = "^4.5.5"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]
black = { extras = ["jupyter"], version = "^22.3.0" }

[tool.black]
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
